# order-checker

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  cache.py  compose.test.yaml  compose.yaml  keys.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_03_1554-e09271f5005e_initial_schema.py  2026_06_03_1935-bcc1283662c5_rename_created_at_to_ship_by.py  2026_06_06_1213-e2d7906a02ff_add_index_for_outbound_logic.py  2026_06_11_1526-aa5a426a95ff_add_shopee_orders_shipping_carrier.py  2026_06_11_1527-9383471fa90d_refactor_outbound_tags.py  2026_06_15_1552-4e6ef916e20d_add_bom.py  2026_07_19_1934-d862d86e8707_.py
backend/init-scripts/: init.sql
backend/src/: cache.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  redis_client.py
backend/src/routers/: admin.py  admin_shopee.py  auth.py  bom.py  items.py  outbound.py  pick_items.py  shopee.py  stocks.py  websocket.py
backend/src/services/: auth_service.py  barcode_service.py  bom_service.py  manager.py  outbound_service.py  pick_item_service.py  queries.py  redis_service.py  shopee_service.py  stock_service.py
backend/src/services/managers/: __init__.py  connection_manager.py  key_manager.py  shopee_cache_manager.py  shopee_token_manager.py  ticket_manager.py
backend/tests/: conftest.py  test_auth_service.py  test_connection_manager.py  test_http_and_exceptions.py  test_logging.py  test_managers.py  test_migrations.py  test_models.py  test_openapi.py  test_redis_and_config.py  test_routers.py  test_services.py
docs/: API.md  ARCHITECTURE.md  (+4 more)
(+35 files in other folders)
