[project]
name = "bakingholic-backend"
version = "0.1.0-alpha.2"
description = "backend API for bakingholic management apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp[speedups]>=3.13.5",
    "fastapi[standard]>=0.136.3",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pycryptodome>=3.23.0",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
]
