[project]
name = "bakingholic-backend"
version = "0.1.0-alpha.2"
description = "backend API for bakingholic management apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp[speedups]>=3.13.5",
    "fastapi[standard]>=0.136.3",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pycryptodome>=3.23.0",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=8.0.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL and Redis",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 55

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
